Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: __GCC_HAVE_DWARF2_CFI_ASM
TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
TODO: swap_sv not undone in pool

6.33 Mon Nov 18 11:26:27 CET 2013
	- do not crash when freeing padlists with holes (in 5.18).
	- tentative SVt_BIND 5.19 port/fix.

6.32 Tue Nov  5 15:35:35 CET 2013
	- use a new algorithm to derive padlists for perl 5.18. The old
          one could lead to 0-pointer accesses inside perl (reported
          by Darin McBride).

6.31 Thu May  9 07:39:48 CEST 2013
	- Coro::AIO requests would crash if the thread was ready'd
          while the request was ongoing.

6.29 Wed May  8 02:55:18 CEST 2013
	- when an on_destroy handler destructs the coro currently being
          destructed a perl scalar could be accessed after being freed,
          likely causing a crash.

6.28 Wed Mar  6 06:58:02 CET 2013
	- clean remnants of existing __DIE__ and __WARN__ handlers so
          they lose their magic and will not cause segfaults later
          (testcase by Andrey Sagulin).
	- improved Coro::State documentation a bit.
        - Coro::Debug::command now flushes the output.
        - add hack detection code for x32 abi, because the braindead slugs
          who designed that made it look exactly like x86_64 without
          providing proper compile time symbols to test for it. as a result,
          this detection cannot work reliably.
        - valgrind stack registering was broken.
        - do not rely on Time::HiRes anymore in Coro::Debug.

6.23 Fri Dec  7 23:36:37 CET 2012
        - use experimental fiber implementation on native windows
          perls.
        - use sizeof (void *) as multiplication factor for stack sizes,
          to accomodate the totally braindamaged microsoft 64 bit "os".
        - changed verifier host from win2k-ap510-32 to win7-sp516-32/64.