@@ -1918,7 +1918,24 @@ prepare_schedule (pTHX_ struct coro_transfer_args *ta)
               && SvOBJECT (SvRV (sv_idle)))
             {
               if (SvRV (sv_idle) == SvRV (coro_current))
-                croak ("FATAL: $Coro::IDLE blocked itself - did you try to block inside an event loop callback? Caught");
+                {
+                  require_pv ("Carp");
+
+                  {
+                    dSP;
+
+                    ENTER;
+                    SAVETMPS;
+
+                    PUSHMARK (SP);
+                    XPUSHs (sv_2mortal (newSVpv ("FATAL: $Coro::IDLE blocked itself - did you try to block inside an event loop callback? Caught", 0)));
+                    PUTBACK;
+                    call_pv ("Carp::confess", G_VOID | G_DISCARD);
+
+                    FREETMPS;
+                    LEAVE;
+                  }
+                }
 
               ++coro_nready; /* hack so that api_ready doesn't invoke ready hook */
               api_ready (aTHX_ SvRV (sv_idle));
