@@ -6,6 +6,10 @@ TODO: __GCC_HAVE_DWARF2_CFI_ASM
 TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
 TODO: swap_sv not undone in pool
 
+	- FATAL: $Coro::IDLE blocked itself will now use Carp::confess
+          to report a full stacktrace, which should help find out
+          where the actual call is.
+
 6.33 Mon Nov 18 11:26:27 CET 2013
 	- do not crash when freeing padlists with holes (in 5.18).
 	- tentative SVt_BIND 5.19 port/fix.
